[package]
name = "game-background"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
actix-web-lab = "0.24.1"
actix-ws = "0.3.0"
bevy = "0.15.3"
bevy-progressbar = { git = "https://github.com/keng9/bevy-progressbar", version = "0.8.0" }
clap = { version = "4.5.32", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
